src/objects/Refund__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Draft__c == True, &apos;Draft&apos;,
IF(Failed__c == True, &apos;Failed&apos;,
  IF(Payment_Failed__c == True, &apos;Payment Failed&apos;,
    IF(Confirmed__c == False, &apos;Pending&apos;,
      &apos;Confirmed - &apos;
      &amp;
      IF(Amount_Allocated__c == 0, &apos;Unallocated&apos;,
        IF(Amount_Allocated__c == Amount__c, &apos;Allocated&apos;,
          IF(Amount_Allocated__c &lt; Amount__c, &apos;Partially Allocated&apos;, &apos;&apos;)
        )
      )
    )
  )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Refund</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Allocated_Less_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Allocated_More_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &gt; Amount__c</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be greater than Refund Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Confirmed__c == True, ISCHANGED( Amount__c ))</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount cannot be changed once Refund has been Confirmed</errorMessage>
    </validationRules>
</CustomObject>